# semantic-rag-pipeline

./: .gitignore  README.md  pyproject.toml  retrieval_benchmark.md
data/: corpus.py
scripts/: run_benchmark.py
src/benchmark/: metrics.py  queries.py  runner.py
src/embedding/: __init__.py  base.py  local_embedder.py  vertex_adapter.py
src/retrieval/: __init__.py  ai_enhanced_search.py  base.py  pipeline.py  query_expander.py  raw_vector_search.py
src/storage/: __init__.py  base.py  faiss_store.py
tests/: conftest.py  test_benchmark.py  test_embedding.py  test_query_expander.py  test_retrieval.py  test_storage.py  test_vertex_mocks.py
