[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-rag-assessment"
version = "0.1.0"
description = "Semantic RAG pipeline with Strategy A (raw vector search) vs Strategy B (AI-enhanced retrieval) benchmarking"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["src*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
